[gd_scene load_steps=30 format=2]

[ext_resource path="res://UI/fpscounter.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://UI/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://Items/InventoryDisplay.gd" type="Script" id=5]
[ext_resource path="res://Items/images/mahjong_red_dragon.png" type="Texture" id=6]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=7]
[ext_resource path="res://Items/InventoryPopup.gd" type="Script" id=8]
[ext_resource path="res://Scripts/ZoomingCamera2D.gd" type="Script" id=9]
[ext_resource path="res://UI/UI.gd" type="Script" id=10]
[ext_resource path="res://UI/Icons/cross.png" type="Texture" id=11]
[ext_resource path="res://UI/Rula.gd" type="Script" id=12]
[ext_resource path="res://Characters/furoshiki/front-standing.png" type="Texture" id=13]
[ext_resource path="res://UI/Fonts/MSPGothic/mspgothic_font_big.tres" type="DynamicFont" id=14]
[ext_resource path="res://UI/skewed_panel.tres" type="StyleBox" id=15]
[ext_resource path="res://UI/Fonts/Arial/arialbold_font.tres" type="DynamicFont" id=16]
[ext_resource path="res://UI/Fonts/Arial/arialbold_font_big.tres" type="DynamicFont" id=17]
[ext_resource path="res://UI/Fonts/Arial/arial.tres" type="DynamicFont" id=18]
[ext_resource path="res://UI/Notifications/Notifications.gd" type="Script" id=19]
[ext_resource path="res://UI/Journal/Journal.gd" type="Script" id=20]
[ext_resource path="res://UI/Log/LogViewer.gd" type="Script" id=28]

[sub_resource type="StyleBoxLine" id=9]
color = Color( 0, 0, 0, 0.92549 )
grow_begin = -10.0
grow_end = -10.0
vertical = true

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0.0941176 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 0.054902 )

[node name="Main" type="Node2D"]
position = Vector2( 1, 1 )
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="FPS" type="Label" parent="UI"]
margin_right = 50.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.796078, 0.352941, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "91"
align = 1
valign = 1
script = ExtResource( 1 )

[node name="Buttons" type="MarginContainer" parent="UI"]
margin_top = 972.0
margin_right = 1920.0
margin_bottom = 1052.0
rect_min_size = Vector2( 0, 80 )
custom_constants/margin_right = 100
custom_constants/margin_top = 10
custom_constants/margin_left = 100
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Buttons"]
margin_left = 100.0
margin_top = 10.0
margin_right = 1820.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="InventoryBtn" type="Button" parent="UI/Buttons/HBoxContainer"]
margin_left = 585.0
margin_right = 685.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 30 )
theme = ExtResource( 4 )
text = "Inventory"
icon_align = 1

[node name="RulaBtn" type="Button" parent="UI/Buttons/HBoxContainer"]
margin_left = 735.0
margin_right = 835.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 30 )
theme = ExtResource( 4 )
text = "#rula"
icon_align = 1

[node name="LogBtn" type="Button" parent="UI/Buttons/HBoxContainer"]
margin_left = 885.0
margin_right = 985.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 30 )
theme = ExtResource( 4 )
text = "Log"
icon_align = 1

[node name="JournalBtn" type="Button" parent="UI/Buttons/HBoxContainer"]
margin_left = 1035.0
margin_right = 1135.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 30 )
theme = ExtResource( 4 )
text = "Journal"
icon_align = 1

[node name="Dialogue" type="MarginContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -380.0
margin_right = 960.0
margin_bottom = -120.0
rect_min_size = Vector2( 0, 80 )
custom_constants/margin_right = 100
custom_constants/margin_top = 10
custom_constants/margin_left = 100
custom_constants/margin_bottom = 10
script = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="UI/Dialogue"]
margin_left = 100.0
margin_top = 10.0
margin_right = 1820.0
margin_bottom = 250.0

[node name="DialogueContainer" type="PanelContainer" parent="UI/Dialogue/CenterContainer"]
margin_left = 500.0
margin_right = 1220.0
margin_bottom = 240.0
rect_min_size = Vector2( 720, 240 )
size_flags_horizontal = 3
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Dialogue/CenterContainer/DialogueContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 719.0
margin_bottom = 239.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer"]
margin_right = 718.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainDialogueContainer" type="MarginContainer" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer"]
margin_right = 554.0
margin_bottom = 238.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="DialogueVBox" type="VBoxContainer" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer/MainDialogueContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 534.0
margin_bottom = 218.0

[node name="DialogueAuthor" type="Label" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer/MainDialogueContainer/DialogueVBox"]
unique_name_in_owner = true
margin_right = 514.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.960784, 0.752941, 0.396078, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 17 )
text = "CATARP!"
valign = 1

[node name="VSeparator" type="VSeparator" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 536.0
margin_right = 556.0
margin_bottom = 230.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 9 )

[node name="InfoDialogueContainer" type="MarginContainer" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 558.0
margin_right = 718.0
margin_bottom = 238.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 7
size_flags_stretch_ratio = 0.15
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer/InfoDialogueContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 228.0
custom_styles/panel = SubResource( 13 )

[node name="DialogueImage" type="TextureRect" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer/HBoxContainer/InfoDialogueContainer/PanelContainer"]
unique_name_in_owner = true
margin_right = 140.0
margin_bottom = 218.0
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
flip_h = true

[node name="Button" type="Button" parent="UI/Dialogue/CenterContainer/DialogueContainer/VBoxContainer"]
visible = false
margin_top = 211.0
margin_right = 718.0
margin_bottom = 234.0
text = "Skip"

[node name="Rula" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -240.0
margin_right = 360.0
margin_bottom = 240.0
rect_min_size = Vector2( 720, 480 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 4 )
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Rula"]
margin_left = 1.0
margin_top = 10.0
margin_right = 719.0
margin_bottom = 470.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="UI/Rula/VBoxContainer"]
margin_right = 718.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Rula/VBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Control" type="Control" parent="UI/Rula/VBoxContainer/Panel/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="UI/Rula/VBoxContainer/Panel/HBoxContainer"]
margin_left = 54.0
margin_right = 666.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 7 )
text = "Rula"
align = 1
valign = 1

[node name="CloseBtn" type="Button" parent="UI/Rula/VBoxContainer/Panel/HBoxContainer"]
margin_left = 670.0
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Rula/VBoxContainer"]
margin_top = 54.0
margin_right = 718.0
margin_bottom = 460.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="UI/Rula/VBoxContainer/ScrollContainer"]
margin_right = 718.0
margin_bottom = 406.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="UI/Rula/VBoxContainer/ScrollContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 708.0
margin_bottom = 396.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Rula/VBoxContainer/ScrollContainer/MarginContainer/CenterContainer"]
margin_left = 249.0
margin_top = 93.0
margin_right = 449.0
margin_bottom = 293.0
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="UI/Rula/VBoxContainer/ScrollContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 16 )
text = "Room Name"
align = 1
valign = 1

[node name="RulaRooms" type="OptionButton" parent="UI/Rula/VBoxContainer/ScrollContainer/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 75.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
align = 1
icon_align = 1

[node name="RulaGoBtn" type="Button" parent="UI/Rula/VBoxContainer/ScrollContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 50 )
text = "#rula"

[node name="Journal" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -240.0
margin_right = 360.0
margin_bottom = 240.0
rect_min_size = Vector2( 720, 480 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 4 )
script = ExtResource( 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Journal"]
margin_left = 1.0
margin_top = 1.0
margin_right = 719.0
margin_bottom = 479.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="UI/Journal/VBoxContainer"]
margin_right = 718.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Journal/VBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Control" type="Control" parent="UI/Journal/VBoxContainer/Panel/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="UI/Journal/VBoxContainer/Panel/HBoxContainer"]
margin_left = 54.0
margin_right = 666.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 7 )
text = "Journal"
align = 1
valign = 1

[node name="CloseBtn" type="Button" parent="UI/Journal/VBoxContainer/Panel/HBoxContainer"]
margin_left = 670.0
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Journal/VBoxContainer"]
margin_top = 54.0
margin_right = 718.0
margin_bottom = 478.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="UI/Journal/VBoxContainer/ScrollContainer"]
margin_right = 718.0
margin_bottom = 424.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Quests" type="VBoxContainer" parent="UI/Journal/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 708.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Log" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -360.0
margin_right = 360.0
margin_bottom = 360.0
rect_min_size = Vector2( 720, 720 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 4 )
script = ExtResource( 28 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Log"]
margin_top = 5.0
margin_right = 720.0
margin_bottom = 715.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="UI/Log/VBoxContainer"]
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Log/VBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Control" type="Control" parent="UI/Log/VBoxContainer/Panel/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="UI/Log/VBoxContainer/Panel/HBoxContainer"]
margin_left = 54.0
margin_right = 666.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 7 )
text = "Log"
align = 1
valign = 1

[node name="CloseBtn" type="Button" parent="UI/Log/VBoxContainer/Panel/HBoxContainer"]
margin_left = 670.0
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true

[node name="LogScroll" type="ScrollContainer" parent="UI/Log/VBoxContainer"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 720.0
margin_bottom = 710.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="UI/Log/VBoxContainer/LogScroll"]
margin_right = 720.0
margin_bottom = 656.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LogsVBox" type="VBoxContainer" parent="UI/Log/VBoxContainer/LogScroll/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 646.0

[node name="Inventory" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Inventory"]
margin_left = 1.0
margin_top = 10.0
margin_right = 1279.0
margin_bottom = 710.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="UI/Inventory/VBoxContainer"]
margin_right = 1278.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Inventory/VBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Control" type="Control" parent="UI/Inventory/VBoxContainer/Panel/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="UI/Inventory/VBoxContainer/Panel/HBoxContainer"]
margin_left = 54.0
margin_right = 1226.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 7 )
text = "Inventory"
align = 1
valign = 1

[node name="CloseBtn" type="Button" parent="UI/Inventory/VBoxContainer/Panel/HBoxContainer"]
margin_left = 1230.0
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Inventory/VBoxContainer"]
margin_top = 54.0
margin_right = 1278.0
margin_bottom = 700.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="UI/Inventory/VBoxContainer/ScrollContainer"]
margin_right = 1278.0
margin_bottom = 646.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="InvItems" type="HFlowContainer" parent="UI/Inventory/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 50.0
margin_right = 1228.0
margin_bottom = 646.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 25
custom_constants/hseparation = 25

[node name="InventoryPopup" type="Panel" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
mouse_filter = 1
custom_styles/panel = ExtResource( 15 )
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InventoryPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer3" type="PanelContainer" parent="UI/InventoryPopup/VBoxContainer"]
margin_right = 480.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 15 )

[node name="InventoryPopupItemName" type="Label" parent="UI/InventoryPopup/VBoxContainer/PanelContainer3"]
unique_name_in_owner = true
margin_right = 480.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 5
custom_colors/font_color = Color( 0.960784, 0.823529, 0.462745, 1 )
custom_fonts/font = ExtResource( 17 )
text = "test"
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="UI/InventoryPopup/VBoxContainer"]
margin_top = 54.0
margin_right = 480.0
margin_bottom = 265.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="UI/InventoryPopup/VBoxContainer/PanelContainer"]
margin_right = 480.0
margin_bottom = 211.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="InventoryPopupImage" type="TextureRect" parent="UI/InventoryPopup/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 480.0
margin_bottom = 191.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="PanelContainer2" type="PanelContainer" parent="UI/InventoryPopup/VBoxContainer"]
margin_top = 269.0
margin_right = 480.0
margin_bottom = 480.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="UI/InventoryPopup/VBoxContainer/PanelContainer2"]
margin_right = 480.0
margin_bottom = 211.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="InventoryPopupDescription" type="Label" parent="UI/InventoryPopup/VBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Blablablalba who gives a fuck"
align = 1
valign = 1
autowrap = true

[node name="Notifications" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 240.0
margin_bottom = 540.0
rect_min_size = Vector2( 300, 300 )
script = ExtResource( 19 )

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.78
drag_margin_top = 0.93
drag_margin_right = 0.82
drag_margin_bottom = 0.72
script = ExtResource( 9 )
minZoom = 0.25
maxZoom = 1.0
zoomDuration = 0.25

[node name="Background" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( 44, -268.005 )
scale = Vector2( 0.25, 0.25 )
z_index = -4096
centered = false

[node name="Grid" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="zObjects" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="UI/Buttons/HBoxContainer/InventoryBtn" to="UI" method="_on_InventoryBtn_pressed"]
[connection signal="pressed" from="UI/Buttons/HBoxContainer/RulaBtn" to="UI" method="_on_RulaBtn_pressed"]
[connection signal="pressed" from="UI/Buttons/HBoxContainer/LogBtn" to="UI" method="_on_LogBtn_pressed"]
[connection signal="pressed" from="UI/Buttons/HBoxContainer/JournalBtn" to="UI" method="_on_JournalBtn_pressed"]
[connection signal="pressed" from="UI/Rula/VBoxContainer/Panel/HBoxContainer/CloseBtn" to="UI/Rula" method="_on_CloseBtn_pressed"]
[connection signal="pressed" from="UI/Rula/VBoxContainer/ScrollContainer/MarginContainer/CenterContainer/VBoxContainer/RulaGoBtn" to="UI" method="_on_RulaGoBtn_pressed"]
[connection signal="pressed" from="UI/Journal/VBoxContainer/Panel/HBoxContainer/CloseBtn" to="UI/Journal" method="_on_CloseBtn_pressed"]
[connection signal="pressed" from="UI/Log/VBoxContainer/Panel/HBoxContainer/CloseBtn" to="UI/Log" method="_on_CloseBtn_pressed"]
[connection signal="pressed" from="UI/Inventory/VBoxContainer/Panel/HBoxContainer/CloseBtn" to="UI/Inventory" method="_on_CloseBtn_pressed"]
